--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          桂林山水甲天下，阳朔山水甲桂林 
+          桂林山水甲天下，阳朔山水甲桂林 第一次添加图片如上图所示，图片是旋转了180度的，在Google与百度均未发现解决方案，后面使用其他照片发现能正常显示，推测是图片本身的问题，具体原因不知，使用截图将此照片截取下来，发现能正常显示。tips：出现问题要从多个角度看待，不然循着错误的方向去解决问题会浪费很多时间。
+将原图片截图保存后添加至文章能正确显示： 
         </div>
           <a href="https://cym2050.github.io/posts/%E8%AF%95%E8%AF%95%E6%B7%BB%E5%8A%A0%E5%9B%BE%E7%89%87/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
