--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          export http_proxy=&quot;http://127.0.0.1:1080&quot; export https_proxy=&quot;http://127.0.0.1:1080&quot; export all_proxy=&quot;socks5://127.0.0.1:1086&quot; 
+          设置代理
+export http_proxy=&quot;http://127.0.0.1:1080&quot; export https_proxy=&quot;http://127.0.0.1:1080&quot; export all_proxy=&quot;socks5://127.0.0.1:1086&quot; 取消代理
+unset http_proxy unset https_proxy unset all_proxy 
         </div>
           <a href="https://cym2050.github.io/posts/%E7%BB%88%E7%AB%AF%E5%BC%80%E5%90%AF%E4%BB%A3%E7%90%86/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
