--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     <title>404 Page not found | 果然</title>
 
-    <link rel="stylesheet" href="/css/meme.min.92b46d561283247842cda363c8f667235c297d5de749050e13a0b7931e6e5525.css" integrity="sha256-krRtVhKDJHhCzaNjyPZnI1wpfV3nSQUOE6C3kx5uVSU=" />
+    <link rel="stylesheet" href="/css/meme.min.0457c756081cdd8c31b66ac0d60f5e0bfeba099f5ac9e668f60974c741be3e49.css" integrity="sha256-BFfHVggc3YwxtmrA1g9eC/66CZ9ayeZo9gl0x0G&#43;Pkk=" />
 
     
     
